--- a/html/primer-proyecto/index.html
+++ b/html/primer-proyecto/index.html
@@ -9,19 +9,22 @@
 </head>
 <body id="top">
     <main>
-    <h1 class="titulo" title="Hola que haces" >Mi primera pagina Web</h1>
+        <header>
+            <h1 class="titulo" title="Hola que haces" >Mi primera pagina Web</h1>
+            <h2>Introducción</h2>      
+        </header>
     <!-- esto no se renderiza -->
-    <h2>Introducción</h2>
+    
     <img src="http://lorempixel.com/400/200/sports" alt="imagen aleatoria de deportes" />
     <br>
     <img src="Images/TRC-Camiseta-Maraton-Amsterdam.jpg" alt="Camseta MM Amsterdam" />
     <a href="https://www.tcsamsterdammarathon.nl/en/" target="_blank">Maraton Amsterdam 2020</a>
     <h1>Texto en h1</h1>
-    <h2>Texto en h1</h2>
-    <h3>Texto en h1</h3>
-    <h4>Texto en h1</h4>
-    <h5>Texto en h1</h5>
-    <h6>Texto en h1</h6>
+    <h2>Texto en h2</h2>
+    <h3>Texto en h3</h3>
+    <h4>Texto en h4</h4>
+    <h5>Texto en h5</h5>
+    <h6>Texto en h6</h6>
     <p>Lorem <span>ipsum</span> dolor sit <span>amet</span> consectetur adipisicing elit. Eos vero facere sequi labore vitae quo sit assumenda et omnis esse perferendis suscipit at eaque ipsa alias, dolorum numquam ratione? Modi!</p>
     <p>Voluptas neque saepe voluptatem nihil perferendis quidem est odit maxime necessitatibus excepturi ipsum quaerat corrupti corporis nulla, maiores unde doloremque itaque amet qui alias molestiae sapiente facilis sint. Explicabo, modi.</p>
     <p>Quibusdam, id error voluptates consequatur provident placeat. Voluptatum commodi doloribus repellat porro veniam aspernatur quia voluptate dolorum esse minus cumque adipisci nihil aut sapiente molestiae itaque eveniet, praesentium, corrupti illo!</p>
