--- a/html/heroes/index.html
+++ b/html/heroes/index.html
@@ -18,16 +18,29 @@
                <li><a class="enlace" href = "comics.html">Comics</a></li>
                <li><a class="enlace" href = "acercade.html">Acerca de</a></li>
            </ul>
-       </nav>
+    </nav>
 
     <main>
         <section>
+            <style>   
+            section { display:flex;
+            justify-content: space-between;
+            /*padding: 0.5rem;*/
+        }
+    </style> 
             <article>
+                <style>
+                    article {
+                        padding: 1rem;
+                    }
+                </style>
                 <h2>Presentación</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum, consequuntur dolorem quaerat libero in ipsam quae consectetur, omnis similique fugit culpa. At facere labore, saepe nobis incidunt vel veritatis.</p>
                 <p>Est aspernatur et maiores excepturi necessitatibus quam minima veritatis ducimus rem culpa, officiis, similique quas aliquid iure quia ratione ad natus animi incidunt adipisci unde pariatur vitae praesentium harum! Id?</p>
-                <img src="images/Imagen1.jfif" alt="imagen aleatoria de deportes" />
-                <img src="images/Imagen2.jfif" alt="imagen aleatoria de deportes" />
+                <div class="container">
+                    <img src="images/Imagen1.jfif" alt="imagen aleatoria de deportes" />
+                    <img src="images/Imagen2.jfif" alt="imagen aleatoria de deportes" />
+                </div>    
                 <p>Delectus reiciendis laudantium vitae sed vero officia velit magni corporis. Harum commodi ea sequi aspernatur, debitis officiis ipsam illo veritatis temporibus quo inventore exercitationem! Possimus tempora obcaecati consequuntur deleniti explicabo?</p>
                 <p>Quam repudiandae assumenda eligendi. Architecto labore dolores ad beatae sunt distinctio nam, numquam, earum consequatur ab quos error perspiciatis soluta. Blanditiis, neque aliquid. Ex exercitationem error sunt vel inventore repudiandae?</p>
                 <p>Quisquam placeat quo sapiente aspernatur nam quae animi blanditiis, est neque iusto fugit nemo, illo possimus suscipit? Similique ad enim asperiores porro provident officiis tempora, accusantium voluptates consequatur tempore eligendi?</p>
@@ -54,8 +67,8 @@
         </nav>  
        </section>
        <section>
-        <img class="logo" src="images/OIP.jfif" alt="imagen aleatoria de deportes" />
-        <img class="logo" src="images/DC.jfif" alt="imagen aleatoria de deportes" /></td>
+        <img class="logo" src="images/OIP.jfif" alt="Marvel"/>
+        <img class="logo" src="images/DC.jfif" alt="DC"/></td>
        </section>
        <section>
         <ul class="text-right">
